2000-06-02  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/user-ref.texi (Invoking the grub shell): Added a caution.
	Why don't so many people still understand that BIOS drive
	numbering are different from OS device naming? How many cautions
	and warnings should we write in the documentation? Sigh.
	
2000-06-01  OKUJI Yoshinori  <okuji@gnu.org>

	From Chip Salzenberg:
	* stage2/cmdline.c (enter_cmdline) [SUPPORT_DISKLESS]: Redisplay
	network configuration after clearing screen, before first prompt.

	* stage2/cmdline.c: Include <shared.h> instead of "shared.h".
	[SUPPORT_DISKLESS]: Include <etherboot.h>.

2000-06-01  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/builtins.c (setup_func): Check if INSTALL_DRIVE is a
	hard disk as well as IMAGE_DRIVE, before trying to install a
	Stage 1.5. Reported by Pavel Roskin.
	
2000-05-31  OKUJI Yoshinori  <okuji@gnu.org>

	* acinclude.m4 (grub_ASM_ABSOLUTE_WITHOUT_ASTERISK): New
	function. Check if GAS requires absolute indirect calls/jumps
	with NO asterisk.
	* configure.in: Call grub_ASM_ABSOLUTE_WITHOUT_ASTERISK.
	* acconfig.h (ABSOLUTE_WITHOUT_ASTERISK): New macro entry.
	* netboot/pci.c (bios32_service) [!ABSOLUTE_WITHOUT_ASTERISK]:
	Prefix the operand to "lcall" with `*'.
	(pcibios_read_config_byte) [!ABSOLUTE_WITHOUT_ASTERISK]:
	Likewise.
	(pcibios_read_config_word) [!ABSOLUTE_WITHOUT_ASTERISK]:
	Likewise.
	(pcibios_read_config_dword) [!ABSOLUTE_WITHOUT_ASTERISK]:
	Likewise.
	(pcibios_write_config_byte) [!ABSOLUTE_WITHOUT_ASTERISK]:
	Likewise.
	(pcibios_write_config_word) [!ABSOLUTE_WITHOUT_ASTERISK]:
	Likewise.
	(pcibios_write_config_dword) [!ABSOLUTE_WITHOUT_ASTERISK]:
	Likewise.
	(check_pcibios) [!ABSOLUTE_WITHOUT_ASTERISK]: Likewise.
	* stage2/asm.S (chain_stage1) [!ABSOLUTE_WITHOUT_ASTERISK]:
	Prefix the operand to "ljmp" with `*'.
	(chain_stage2) [!ABSOLUTE_WITHOUT_ASTERISK]: Likewise.
	(big_linux_boot) [!ABSOLUTE_WITHOUT_ASTERISK]: Likewise.
	
2000-05-29  Chip Salzenberg  <chip@valinux.com>
